feat: init endpoint to create tree
