# api.yml
@@ -40,6 +40,38 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
+
+  /estate/{id}/tree:
+    post:
+      summary: Create a new tree to the estate
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+          description: uuid of estate
+      requestBody:
+        description: Necessary attribute of tree
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/PostTreeRequest"
+      responses:
+        200:
+          description: Success on creating a new tree on estate
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UuidResponse"
+        400:
+          description: Bad request on body request or coordinate already taken
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+
 components:
   schemas:
     EstateModel:
@@ -85,4 +117,17 @@ components:
         length:
           type: integer
         width:
+          type: integer
+    PostTreeRequest:
+      type: object
+      required:
+        - x
+        - y
+        - height
+      properties:
+        x:
+          type: integer
+        y:
+          type: integer
+        height:
           type: integer
